{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 25,
  "lineage": "625e6f23-04fa-5ba0-26e2-e6640c2a1538",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "central-allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-24T13:31:13.071-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/central-259919/global/firewalls/central-allow-http",
            "name": "central-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/central-259919/global/networks/central",
            "priority": 1000,
            "project": "central-259919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-259919/global/firewalls/central-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.central"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "central-allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-24T13:17:42.880-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "projects/central-259919/global/firewalls/central-allow-ssh",
            "name": "central-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/central-259919/global/networks/central",
            "priority": 1000,
            "project": "central-259919",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-259919/global/firewalls/central-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.central"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "central",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/central-259919/global/networks/central",
            "name": "central",
            "project": "central-259919",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-259919/global/networks/central"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "central",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-23T22:24:03.911-08:00",
            "id": "projects/central-259919/regions/us-central1/routers/central",
            "name": "central",
            "network": "https://www.googleapis.com/compute/v1/projects/central-259919/global/networks/central",
            "project": "central-259919",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-259919/regions/us-central1/routers/central"
          },
          "depends_on": [
            "google_compute_network.central"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "central",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "central-259919/us-central1/central/central",
            "min_ports_per_vm": 0,
            "name": "central",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "central-259919",
            "router": "central",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "depends_on": [
            "google_compute_router.central"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "central-42",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-11-23T22:21:22.022-08:00",
            "fingerprint": "g2dPHr5fHow=",
            "gateway_address": "10.42.32.1",
            "id": "projects/central-259919/regions/us-central1/subnetworks/central-42",
            "ip_cidr_range": "10.42.32.0/20",
            "name": "central-42",
            "network": "https://www.googleapis.com/compute/v1/projects/central-259919/global/networks/central",
            "private_ip_google_access": false,
            "project": "central-259919",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/central-259919/regions/us-central1/subnetworks/central-42"
          },
          "depends_on": [
            "google_compute_network.central"
          ]
        }
      ]
    }
  ]
}